try to fix "Punkt hinzufügen" visual bug on mobile -v7

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -13,5 +13,6 @@ button {
 }
 
 #bugapointmenu {
-
+  overflow: auto;
+  height: calc(100vh - 280px);
 }
